--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -2,8 +2,11 @@
 name = "denim-sam-proxy"
 version = "0.1.0"
 edition = "2021"
+repository.workspace = true
+authors.workspace = true
+license.workspace = true
 
 [dependencies]
 sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", version = "0.1.0" }
 sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", version = "0.1.0" }
-tokio = { version = "1.40.0", features = ["full"] }
+tokio = { workspace = true, features = ["full"] }
