--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -2,8 +2,11 @@
 name = "denim-sam-client"
 version = "0.1.0"
 edition = "2021"
+repository.workspace = true
+authors.workspace = true
+license.workspace = true
 
 [dependencies]
-sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", version = "0.1.0" }
-sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", version = "0.1.0" }
-tokio = { version = "1.40.0", features = ["full"] }
+sam-client = { workspace = true }
+sam-common = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
