working websocket proxy

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -10,10 +10,14 @@ license.workspace = true
 sam-server = { workspace = true }
 sam-common = { workspace = true }
 sam-client = { workspace = true }
+async-trait = { workspace = true }
+futures-util = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 axum = { workspace = true, features = ["ws", "macros"] }
 axum-extra = { workspace = true, features = ["typed-header"] }
 axum-server = { workspace = true, features = ["tls-rustls"] }
 derive_more = { workspace = true, features = ["display", "error", "from"] }
+base64 = { workspace = true }
+tokio-tungstenite = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
