--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,9 @@ axum = { version = "0.8.1" }
 axum-extra = { version = "0.10.0" }
 axum-server = { version = "0.7" }
 derive_more = { version = "2.0.1" }
+futures-util = { version = "0.3.30" }
+tokio-tungstenite = { version = "0.26.2" }
+base64 = "0.21.7"
+async-trait = "0.1.83"
 env_logger = "0.11.6"
 log = "0.4.25"
