--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "denim-sam-example"
+name = "e2e"
 version = "0.1.0"
 edition = "2021"
 repository.workspace = true
@@ -8,8 +8,9 @@ license.workspace = true
 
 [dependencies]
 sam-server = { workspace = true }
+sam-client = { workspace = true }
 denim-sam-proxy = { workspace = true }
-
 tokio = { workspace = true, features = ["full"] }
 env_logger = { workspace = true }
-clap = { workspace = true }
+rustls = { workspace = true }
+rustls-pemfile = { workspace = true }
