--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,6 +11,9 @@ sam-common = { workspace = true }
 prost = { workspace = true }
 bon = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
+log = { workspace = true }
+env_logger = { workspace = true }
+derive_more = { workspace = true, features = ["display", "error", "from"] }
 
 [build-dependencies]
 prost-build = { workspace = true }
