--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -23,3 +23,5 @@ env_logger = { workspace = true }
 log = { workspace = true }
 bon = { workspace = true }
 clap = { workspace = true }
+rustls = { workspace = true, features = ["ring"] }
+rustls-pemfile = { workspace = true }
