--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { workspace = true, features = ["full"] }
 log = { workspace = true }
 env_logger = { workspace = true }
 derive_more = { workspace = true, features = ["display", "error", "from"] }
+async-trait = { workspace = true }
 
 [build-dependencies]
 prost-build = { workspace = true }
