--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ tokio = { version = "1.40.0", features = ["full"] }
 prost-build = { version = "0.13.5" }
 prost = { version = "0.13.5" }
 bon =  "3.5.0"
+flatbuffers = "25.2.10"
+rand = "0.9.0"
+log = "0.4.26"
