--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -25,3 +25,5 @@ bon = { workspace = true }
 clap = { workspace = true }
 rustls = { workspace = true, features = ["ring"] }
 rustls-pemfile = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
