--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,9 +10,13 @@ license.workspace = true
 sam-common = { workspace = true }
 prost = { workspace = true }
 bon = { workspace = true }
-rand = {workspace = true}
-log = {workspace = true}
-bincode = {workspace = true}
+tokio = { workspace = true, features = ["full"] }
+log = { workspace = true }
+env_logger = { workspace = true }
+derive_more = { workspace = true, features = ["display", "error", "from"] }
+async-trait = { workspace = true }
+rand = { workspace = true }
+bincode = { workspace = true }
 
 [build-dependencies]
 prost-build = { workspace = true }
