--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ denim-sam-client = { path = "client" }
 denim-sam-common = { path = "common" }
 e2e = { path = "e2e" }
 
-sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "tls-config" }
-sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "tls-config" }
-sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "tls-config" }
+sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
+sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
+sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
 rustls = { version = "0.23.15" }
 rustls-pemfile = "2.2.0"
 tokio = { version = "1.40.0" }
