--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,9 @@ async-trait = "0.1.83"
 env_logger = "0.11.6"
 log = "0.4.25"
 clap = "4.5.32"
+serde_json = "1.0.139"
+serde = { version = "1.0.210" }
+
+
+# Dev dependencies
+rstest = "0.24.0"
