--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ async-trait = "0.1.83"
 tokio = { version = "1.40.0", features = ["full"] }
 prost-build = { version = "0.13.5" }
 prost = { version = "0.13.5" }
-bon = "3.5.0"
+bon =  "3.5.0"
 rand = "0.9.0"
 bincode = "2.0.1"
+rstest = "0.25.0"
