implemented test, and fixed bug in receiving buffer

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,14 +10,15 @@ license.workspace = true
 sam-common = { workspace = true }
 prost = { workspace = true }
 bon = { workspace = true }
-rstest = { workspace = true}
+rstest = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 log = { workspace = true }
 env_logger = { workspace = true }
 derive_more = { workspace = true, features = ["display", "error", "from"] }
 async-trait = { workspace = true }
-rand = { workspace = true }
+rand = { workspace = true, features = ["std_rng"] }
 bincode = { workspace = true }
+
 
 [build-dependencies]
 prost-build = { workspace = true }
