--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ env_logger = "0.11.6"
 derive_more = "2.0.1"
 log = "0.4.25"
 async-trait = "0.1.83"
-tokio = { version = "1.40.0", features = ["full"] }
-prost-build = { version = "0.13.5" }
-prost = { version = "0.13.5" }
-bon =  "3.5.0"
+tokio = "1.40.0"
+prost-build = "0.13.5"
+prost = "0.13.5"
+bon = "3.5.0"
 rand = "0.9.0"
 bincode = "2.0.1"
 rstest = "0.25.0"
