impl recv buffer in receiver

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,3 +19,6 @@ log = { workspace = true }
 derive_more = { workspace = true, features = ["display", "error", "from"] }
 prost = { workspace = true }
 rand = { workspace = true, features = ["std_rng"] }
+
+[dev-dependencies]
+rstest = { workspace = true }
