--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -8,10 +8,14 @@ license.workspace = true
 
 [dependencies]
 sam-server = { workspace = true }
+sam-common = { workspace = true }
 sam-client = { workspace = true }
+denim-sam-client = { workspace = true }
 denim-sam-proxy = { workspace = true }
+libsignal-protocol = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 env_logger = { workspace = true }
 rustls = { workspace = true }
 rustls-pemfile = { workspace = true }
 rstest = { workspace = true }
+rand = { workspace = true }
