--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -12,6 +12,8 @@ sam-common = { workspace = true }
 sam-client = { workspace = true }
 async-trait = { workspace = true }
 futures-util = { workspace = true }
+prost = { workspace = true }
+denim-sam-common = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 axum = { workspace = true, features = ["ws", "macros"] }
 axum-extra = { workspace = true, features = ["typed-header"] }
