--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -15,3 +15,4 @@ env_logger = { workspace = true }
 rustls = { workspace = true }
 rustls-pemfile = { workspace = true }
 rstest = { workspace = true }
+denim-sam-common = { workspace = true }
