--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ denim-sam-client = { path = "client" }
 denim-sam-common = { path = "common" }
 e2e = { path = "e2e" }
 
-sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
-sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
-sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
+sam-server = { path = "../sam-instant-messenger/server/" }
+sam-common = { path = "../sam-instant-messenger/common/" }
+sam-client = { path = "../sam-instant-messenger/client/" }
 rustls = "0.23.15"
 rustls-pemfile = "2.2.0"
 tokio = "1.40.0"
@@ -36,7 +36,8 @@ serde_json = "1.0.139"
 serde = "1.0.210"
 prost-build = "0.13.5"
 prost = "0.13.5"
-rand = "0.9.0"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
 bincode = "2.0.1"
 
 
