--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -18,6 +18,7 @@ derive_more = { workspace = true, features = ["display", "error", "from"] }
 async-trait = { workspace = true }
 rand = { workspace = true, features = ["std_rng"] }
 bincode = { workspace = true }
+serde = { workspace = true }
 
 
 [build-dependencies]
