--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -29,3 +29,5 @@ rustls = { workspace = true, features = ["ring"] }
 rustls-pemfile = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+rand = { workspace = true }
+rand_chacha = { workspace = true }
