--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ denim-sam-client = { path = "client" }
 denim-sam-common = { path = "common" }
 e2e = { path = "e2e" }
 
-sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "refactor" }
-sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "refactor" }
-sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "refactor" }
+sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
+sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
+sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
 libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
 rustls = "0.23.15"
 rustls-pemfile = "2.2.0"
@@ -39,7 +39,6 @@ prost-build = "0.13.5"
 prost = "0.13.5"
 rand = "0.8.5"
 bincode = "2.0.1"
-sqlx = { version = "0.8.3" }
 
 
 # Dev dependencies
