--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -12,6 +12,8 @@ sam-common = { workspace = true }
 sam-client = { workspace = true }
 async-trait = { workspace = true }
 futures-util = { workspace = true }
+prost = { workspace = true }
+denim-sam-common = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 axum = { workspace = true, features = ["ws", "macros"] }
 axum-extra = { workspace = true, features = ["typed-header"] }
@@ -27,3 +29,6 @@ rustls = { workspace = true, features = ["ring"] }
 rustls-pemfile = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+
+[dev-dependencies]
+rstest = { workspace = true }
