--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ denim-sam-client = { path = "client" }
 denim-sam-common = { path = "common" }
 e2e = { path = "e2e" }
 
-sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
-sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
-sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
+sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "encrypt-improve" }
+sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "encrypt-improve" }
+sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "encrypt-improve" }
 libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
 rustls = "0.23.15"
 rustls-pemfile = "2.2.0"
