--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git"
 sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "encrypt-improve" }
 sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "encrypt-improve" }
 libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
+libsignal-core = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
 rustls = "0.23.15"
 rustls-pemfile = "2.2.0"
 tokio = "1.40.0"
