--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -20,3 +20,5 @@ rustls = { workspace = true }
 rustls-pemfile = { workspace = true }
 rstest = { workspace = true }
 rand = { workspace = true }
+bon = { workspace = true }
+async-trait = { workspace = true }
