cherrypicking nooby noob:)

--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 sam-server = { workspace = true }
 sam-common = { workspace = true }
 sam-client = { workspace = true }
+sam-net = { workspace = true }
 test-utils = { workspace = true }
 denim-sam-client = { workspace = true }
 denim-sam-common = { workspace = true }
