--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -11,7 +11,7 @@ sam-server = { workspace = true }
 sam-common = { workspace = true }
 sam-client = { workspace = true }
 sam-net = { workspace = true }
-test-utils = { workspace = true }
+sam-test-utils = { workspace = true }
 denim-sam-client = { workspace = true }
 denim-sam-common = { workspace = true }
 denim-sam-proxy = { workspace = true }
