--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -11,6 +11,7 @@ sam-server = { workspace = true }
 sam-common = { workspace = true }
 sam-client = { workspace = true }
 sam-net = { workspace = true }
+sam-security = { workspace = true }
 denim-sam-common = { workspace = true }
 libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
 async-trait = { workspace = true }
