--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git"
 sam-net = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
 sam-security = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
 sam-test-utils = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "main" }
-libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
-libsignal-core = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
+libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0", rev = "bd9a11f943ef54a60d179f1519fa8bfee08f186a" }
+libsignal-core = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0", rev = "bd9a11f943ef54a60d179f1519fa8bfee08f186a" }
 rustls = "0.23.15"
 rustls-pemfile = "2.2.0"
 tokio = "1.40.0"
