--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -12,7 +12,7 @@ sam-common = { workspace = true }
 sam-net = { workspace = true }
 sam-security = { workspace = true }
 denim-sam-common = { workspace = true }
-libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
+libsignal-protocol = { workspace = true }
 async-trait = { workspace = true }
 futures-util = { workspace = true }
 prost = { workspace = true }
