--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -33,6 +33,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
+sqlx = { workspace = true, features = ["postgres", "uuid", "runtime-tokio"] }
 
 [dev-dependencies]
 rstest = { workspace = true }
