--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -19,6 +19,6 @@ async-trait = { workspace = true }
 rand = { workspace = true, features = ["std_rng"] }
 bincode = { workspace = true }
 libsignal-protocol = { workspace = true }
-
+rand_chacha = { workspace = true }
 [build-dependencies]
 prost-build = { workspace = true }
