--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,28 +33,6 @@ jobs:
           wget https://github.com/protocolbuffers/protobuf/releases/download/v21.3/protoc-21.3-linux-x86_64.zip
           unzip -o protoc-21.3-linux-x86_64.zip -d ~/.local
 
-      - name: Cache Cargo bin (for sqlx-cli)
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/bin/sqlx
-          key: sqlx-cli-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            sqlx-cli-${{ runner.os }}-
-
-      - name: Install SQLx CLI if not cached
-        run: |
-          if ! command -v sqlx &> /dev/null; then
-            cargo install sqlx-cli
-          else
-            echo "sqlx-cli found in cache, skipping installation"
-          fi
-
-      - name: Verify SQLx installation
-        run: sqlx --version
-
-      #- name: Setup sqlx
-      #  run: cd client/database/ && sqlx db create -D sqlite://dev.db && sqlx migrate run -D sqlite://dev.db && cd ../..
-
       - name: Run fmt
         run: cargo fmt --all -- --check
 
@@ -130,7 +108,7 @@ jobs:
             sqlx-cli-${{ runner.os }}-
 
       - name: Setup Postgres
-        run: curl -o proxi/database/init.sql https://raw.githubusercontent.com/SAM-Research/sam-instant-messenger/refs/heads/main/server/database/init.sql
+        run: curl -o ./proxi/database/init.sql https://raw.githubusercontent.com/SAM-Research/sam-instant-messenger/refs/heads/main/server/database/init.sql
 
       - name: Init Postgres
         uses: hoverkraft-tech/compose-action@v2.0.1
