--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -108,7 +108,7 @@ jobs:
             sqlx-cli-${{ runner.os }}-
 
       - name: Setup Postgres
-        run: curl -o ./proxi/database/init.sql https://raw.githubusercontent.com/SAM-Research/sam-instant-messenger/refs/heads/main/server/database/init.sql
+        run: ls ./proxi/database &&curl -o ./proxi/database/init.sql https://raw.githubusercontent.com/SAM-Research/sam-instant-messenger/refs/heads/main/server/database/init.sql
 
       - name: Init Postgres
         uses: hoverkraft-tech/compose-action@v2.0.1
