--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -11,6 +11,7 @@ sam-server = { workspace = true }
 sam-common = { workspace = true }
 sam-net = { workspace = true }
 sam-security = { workspace = true }
+sam-test-utils = { workspace = true }
 denim-sam-common = { workspace = true }
 libsignal-protocol = { workspace = true }
 async-trait = { workspace = true }
