Proxy deletes keys when users have completed X3DH (#72)

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -37,3 +37,4 @@ sqlx = { workspace = true, features = ["postgres", "uuid", "runtime-tokio"] }
 
 [dev-dependencies]
 rstest = { workspace = true }
+sam-test-utils = { workspace = true }
