--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -26,3 +26,4 @@ rand = { workspace = true }
 bon = { workspace = true }
 async-trait = { workspace = true }
 uuid = { workspace = true }
+prost = { workspace = true }
